--- a/git-deploy-template/package.json
+++ b/git-deploy-template/package.json
@@ -1,16 +1,18 @@
 {
   "name": "deploy",
   "version": "1.0.0",
-  "description": "depo desc",
+  "description": "depo",
   "author": "a",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "npm run build; push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
